# Password-Manager

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json!linux!
src-tauri/resources/: db_template.json  eff_large_wordlist.txt  example_db.json  profile.json
src-tauri/src/: db_template.json  encryption.rs  file_operations.rs  hash.rs  key_derivation.rs  main.rs  password_generator.rs
src-tauri/src/res/: example.secpass  profile.json  test_database.json
src/components/: Database.tsx  Databases.tsx  Home.tsx  Navbar.tsx  NewDatabase.tsx  PasswordGenerator.tsx  Security.tsx  Settings.tsx  Tests.tsx
src/css/: Database.module.css  Styles.module.css
src/utils/: constants.ts  fileOperations.ts  passwordGeneration.ts  passwordStrength.tsx  styles.ts
