[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.72.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "dialog-open", "dialog-save", "clipboard-read-text", "clipboard-write-text", "fs-all"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
enc_file = "0.4.7"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
aes = "0.8.3"
aes-gcm = "0.10.2"
argon2 = "0.5.1"
rust-crypto = "0.2.0"
rand = "0.8.5"
pbkdf2 = "0.12.2"
sha2 = "0.10.7"
passwords = "3.1.16"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
